# libfwevt

./: .codecov.yml  .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  README  acinclude.m4  appveyor.yml  build.ps1  configure.ac  libfwevt-wiki.ini  libfwevt.ini  libfwevt.pc  libfwevt.pc.in  libfwevt.spec  libfwevt.spec.in  pyproject.toml.in  runtests.sh  setup.cfg.in  synclibs.ps1  synclibs.sh  syncsharedlibs.sh  tox.ini
.github/workflows/: build.yml  build_linux.yml  build_ossfuzz.yml  build_shared.yml  build_windows.yml  check_source.yml  coverage.yml
.travis/: before_install.sh  runtests.sh  script.sh
common/: config_winapi.h  types.h.in  wide_string.h
documentation/: Windows Event manifest binary format.asciidoc
dpkg/: changelog.in  control  copyright  copyright.in  rules
include/: Makefile.am  libfwevt.h.in
include/libfwevt/: definitions.h  definitions.h.in  error.h  extern.h  features.h  features.h.in  types.h  types.h.in
libfwevt/: Makefile.am  fwevt_template.h  libfwevt.c  libfwevt.rc  libfwevt.rc.in  libfwevt_channel.c  libfwevt_channel.h  libfwevt_data_segment.c  libfwevt_data_segment.h  libfwevt_date_time.c  libfwevt_date_time.h  libfwevt_debug.c  libfwevt_debug.h  libfwevt_definitions.h  libfwevt_definitions.h.in  libfwevt_error.c  libfwevt_error.h  libfwevt_event.c  libfwevt_event.h  libfwevt_extern.h  libfwevt_floating_point.c  libfwevt_floating_point.h  libfwevt_integer.c  libfwevt_integer.h  libfwevt_keyword.c  libfwevt_keyword.h  libfwevt_level.c  libfwevt_level.h  libfwevt_libcdata.h  libfwevt_libcerror.h  libfwevt_libcnotify.h  libfwevt_libcstring.h  libfwevt_libfdatetime.h  libfwevt_libfguid.h  libfwevt_libfvalue.h  libfwevt_libfwnt.h  libfwevt_libuna.h  libfwevt_manifest.c  libfwevt_manifest.h  libfwevt_map.c  (+29 more)
m4/: tests.m4
manuals/: Makefile.am  libfole.3  libfwevt.3
msvscpp/: Makefile.am  libfwevt.sln
msvscpp/fwevt_get_version/: fwevt_get_version.vcproj
msvscpp/fwevt_test_channel/: fwevt_test_channel.vcproj
msvscpp/fwevt_test_data_segment/: fwevt_test_data_segment.vcproj
msvscpp/fwevt_test_date_time/: fwevt_test_date_time.vcproj
msvscpp/fwevt_test_error/: fwevt_test_error.vcproj
msvscpp/fwevt_test_event/: fwevt_test_event.vcproj
msvscpp/fwevt_test_floating_point/: fwevt_test_floating_point.vcproj
msvscpp/fwevt_test_get_version/: fwevt_test_get_version.vcproj
msvscpp/fwevt_test_integer/: fwevt_test_integer.vcproj
msvscpp/fwevt_test_keyword/: fwevt_test_keyword.vcproj
msvscpp/fwevt_test_level/: fwevt_test_level.vcproj
msvscpp/fwevt_test_manifest/: fwevt_test_manifest.vcproj
msvscpp/fwevt_test_map/: fwevt_test_map.vcproj
msvscpp/fwevt_test_notify/: fwevt_test_notify.vcproj
msvscpp/fwevt_test_opcode/: fwevt_test_opcode.vcproj
msvscpp/fwevt_test_provider/: fwevt_test_provider.vcproj
msvscpp/fwevt_test_support/: fwevt_test_support.vcproj
msvscpp/fwevt_test_task/: fwevt_test_task.vcproj
msvscpp/fwevt_test_template/: fwevt_test_template.vcproj
msvscpp/fwevt_test_template_item/: fwevt_test_template_item.vcproj
msvscpp/fwevt_test_xml_document/: fwevt_test_xml_document.vcproj
msvscpp/fwevt_test_xml_tag/: fwevt_test_xml_tag.vcproj
msvscpp/fwevt_test_xml_template_value/: fwevt_test_xml_template_value.vcproj
msvscpp/fwevt_test_xml_token/: fwevt_test_xml_token.vcproj
msvscpp/fwevt_test_xml_value/: fwevt_test_xml_value.vcproj
msvscpp/libcdata/: libcdata.vcproj
msvscpp/libcerror/: libcerror.vcproj
msvscpp/libcnotify/: libcnotify.vcproj
msvscpp/libcstring/: libcstring.vcproj
msvscpp/libcthreads/: libcthreads.vcproj
msvscpp/libfdatetime/: libfdatetime.vcproj
msvscpp/libfguid/: libfguid.vcproj
msvscpp/libfvalue/: libfvalue.vcproj
msvscpp/libfwevt/: libfwevt.vcproj
msvscpp/libfwnt/: libfwnt.vcproj
msvscpp/libuna/: libuna.vcproj
msvscpp/pyfwevt/: pyfwevt.vcproj
ossfuzz/: Makefile.am  manifest_fuzzer.cc  ossfuzz_libfwevt.h  xml_document_fuzzer.cc
pyfwevt/: Makefile.am  pyfwevt.c  pyfwevt.h  pyfwevt_channel.c  pyfwevt_channel.h  pyfwevt_channels.c  pyfwevt_channels.h  pyfwevt_error.c  pyfwevt_error.h  pyfwevt_event.c  pyfwevt_event.h  pyfwevt_events.c  pyfwevt_events.h  pyfwevt_guid.c  pyfwevt_guid.h  pyfwevt_integer.c  pyfwevt_integer.h  pyfwevt_keyword.c  pyfwevt_keyword.h  pyfwevt_keywords.c  pyfwevt_keywords.h  pyfwevt_level.c  pyfwevt_level.h  pyfwevt_levels.c  pyfwevt_levels.h  pyfwevt_libcerror.h  pyfwevt_libfguid.h  pyfwevt_libfwevt.h  pyfwevt_manifest.c  pyfwevt_manifest.h  pyfwevt_map.c  pyfwevt_map.h  pyfwevt_maps.c  pyfwevt_maps.h  pyfwevt_opcode.c  pyfwevt_opcode.h  pyfwevt_opcodes.c  pyfwevt_opcodes.h  pyfwevt_provider.c  pyfwevt_provider.h  (+16 more)
pyfwevt-python2/: Makefile.am
pyfwevt-python3/: Makefile.am
tests/: Makefile.am  atlocal.in  fwevt_test_channel.c  fwevt_test_data_segment.c  fwevt_test_date_time.c  fwevt_test_error.c  fwevt_test_event.c  fwevt_test_floating_point.c  fwevt_test_get_version.c  fwevt_test_integer.c  fwevt_test_keyword.c  fwevt_test_level.c  fwevt_test_libcerror.h  fwevt_test_libcnotify.h  fwevt_test_libcstring.h  fwevt_test_libfvalue.h  fwevt_test_libfwevt.h  fwevt_test_libuna.h  fwevt_test_macros.h  fwevt_test_manifest.c  fwevt_test_map.c  fwevt_test_memory.c  fwevt_test_memory.h  fwevt_test_notify.c  fwevt_test_opcode.c  fwevt_test_provider.c  fwevt_test_support.c  fwevt_test_task.c  fwevt_test_template.c  fwevt_test_template_item.c  fwevt_test_unused.h  fwevt_test_xml_document.c  fwevt_test_xml_tag.c  fwevt_test_xml_template_value.c  fwevt_test_xml_token.c  fwevt_test_xml_value.c  pkgbuild.sh  pyfwevt_test_event.py  pyfwevt_test_manifest.py  pyfwevt_test_provider.py  (+14 more)
tests/data/: channel.1  event.1  level.1  manifest.1  opcode.1  provider.1  task.1  template.1  xml_document.1
