include_HEADERS = \
	libfwevt.h

pkginclude_HEADERS = \
	libfwevt/definitions.h \
	libfwevt/error.h \
	libfwevt/extern.h \
	libfwevt/features.h \
	libfwevt/types.h

EXTRA_DIST = \
	libfwevt.h.in \
	libfwevt/definitions.h.in \
	libfwevt/features.h.in \
	libfwevt/types.h.in

DISTCLEANFILES = \
	libfwevt.h \
	libfwevt/definitions.h \
	libfwevt/features.h \
	libfwevt/types.h \
	Makefile \
	Makefile.in

