MSVSCPP_FILES = \
	fwevt_test_channel/fwevt_test_channel.vcproj \
	fwevt_test_error/fwevt_test_error.vcproj \
	fwevt_test_event/fwevt_test_event.vcproj \
	fwevt_test_keyword/fwevt_test_keyword.vcproj \
	fwevt_test_level/fwevt_test_level.vcproj \
	fwevt_test_manifest/fwevt_test_manifest.vcproj \
	fwevt_test_map/fwevt_test_map.vcproj \
	fwevt_test_notify/fwevt_test_notify.vcproj \
	fwevt_test_opcode/fwevt_test_opcode.vcproj \
	fwevt_test_provider/fwevt_test_provider.vcproj \
	fwevt_test_support/fwevt_test_support.vcproj \
	fwevt_test_task/fwevt_test_task.vcproj \
	fwevt_test_template/fwevt_test_template.vcproj \
	fwevt_test_template_item/fwevt_test_template_item.vcproj \
	fwevt_test_xml_document/fwevt_test_xml_document.vcproj \
	fwevt_test_xml_tag/fwevt_test_xml_tag.vcproj \
	fwevt_test_xml_template_value/fwevt_test_xml_template_value.vcproj \
	fwevt_test_xml_token/fwevt_test_xml_token.vcproj \
	fwevt_test_xml_value/fwevt_test_xml_value.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcnotify/libcnotify.vcproj \
	libcthreads/libcthreads.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfguid/libfguid.vcproj \
	libfvalue/libfvalue.vcproj \
	libfwevt/libfwevt.vcproj \
	libuna/libuna.vcproj \
	pyfwevt/pyfwevt.vcproj \
	libfwevt.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

DISTCLEANFILES = \
	Makefile \
	Makefile.in

